--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.9.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "discord.js": "^14.13.0",
-    "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1"
+    "dotenv": "^16.3.1"
   }
 }
