--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "commonjs",
     "rootDir": "./src",
-    "outDir": "./",
+    "outDir": "./dist",
     "removeComments": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
